<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.quizapp.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/motoquiz" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/first_bmw_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/first_question"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/checkbox_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:paddingLeft="24dp"
                android:text="@string/checkbox_one"
                android:textSize="16sp" />


            <CheckBox
                android:id="@+id/checkbox_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:paddingLeft="24dp"
                android:text="@string/checkbox_two"
                android:textSize="16sp" />


            <CheckBox
                android:id="@+id/checkbox_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:paddingLeft="24dp"
                android:text="@string/checkbox_three"
                android:textSize="16sp" />


            <CheckBox
                android:id="@+id/checkbox_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:paddingLeft="24dp"
                android:text="@string/checkbox_four"
                android:textSize="16sp" />


            <CheckBox
                android:id="@+id/checkbox_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:paddingLeft="24dp"
                android:text="@string/checkbox_five"
                android:textSize="16sp" />


            <CheckBox
                android:id="@+id/checkbox_six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:paddingLeft="24dp"
                android:text="@string/checkbox_six"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="#ff5c5c" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/second_question"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitXY"
                android:src="@drawable/ducati" />

            <EditText
                android:id="@+id/second_ducati_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/hint"
                android:inputType="text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="#ff5c5c" />

            <TextView
                android:id="@+id/third_isle_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/third_question"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/yes_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/radio_button_yes"
                    android:textSize="16sp"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/no_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/radio_button_no"
                    android:textSize="16sp"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="#ff5c5c" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/fourth_question"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitXY"
                android:src="@drawable/motoguzzi" />

            <EditText
                android:id="@+id/fourth_guzzi_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/hint"
                android:inputType="text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="#ff5c5c" />

            <TextView
                android:id="@+id/fifth_polish_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/fifth_question"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/lech_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/radio_button_lech"
                    android:textSize="16sp"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/sokol_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/radio_button_sokol"
                    android:textSize="16sp"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/cws_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/radio_button_cws"
                    android:textSize="16sp"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/wsk_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/radio_button_wsk"
                    android:textSize="16sp"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="#ff5c5c" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:scaleType="fitXY"
                android:text="@string/submit"
                android:onClick="Submit"/>


        </LinearLayout>

    </ScrollView>

</LinearLayout>
